--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	Hello
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi deleniti 
+		repellat delectus corrupti? Vero quo quasi numquam quos reprehenderit laboriosam sint 
+		maiores, dolorum corrupti nemo autem at atque. Maxime, voluptate!</p>
 </body>
 </html>
